# LD55_Summoning

./: .envrc  .gitignore  Cargo.toml  README.md  TODO.md  devenv.nix  index.html
.cargo/: config.toml
assets/: Sprite-Bomb.aseprite  Sprite-ManaGem.aseprite  Sprite-Player.aseprite
assets/images/: Background-Rock.aseprite  Sprite-Button.aseprite  Sprite-Enemy.aseprite
src/: audio.rs  index.scss  loading.rs  main.rs
src/classes/: mod.rs
