[package]
name = "ld55_summoning"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Antonio Farinetti", "Michelle Farinetti", "William Farinetti"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_xpbd_2d = "0.4.2"
leafwing-input-manager = "0.13.3"
leafwing_abilities = "0.7.0"
bevy-inspector-egui = "0.23.4"
bevy_screen_diagnostics = "0.5.0"
rand = "0.8.5"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
