[package]
name = "ld55_summoning"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Antonio Farinetti"]
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_scene",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "wayland",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
    "multi-threaded",
    "zstd",
] }
bevy_kira_audio = { version = "0.19", features = [ "ogg" ] }
bevy_asset_loader = { version = "0.20.1", features = [ "2d" ] }
bevy_xpbd_2d = "0.4.2"
leafwing-input-manager = "0.13.3"
bevy-inspector-egui = "0.23.4"
bevy_screen_diagnostics = "0.5.0"
bevy-ui-dsl = "0.8.0"
rand = "0.8.5"

[features]
dev = [
    "bevy/dynamic_linking",
]

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[build-dependencies]
embed-resource = "2.4.2"
